<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.w0143446.quizbuilder.MainActivity">

    <!--https://developer.android.com/guide/topics/ui/layout/relative.html !-->
    <!--TOP ROW PANEL !-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQCount_text"
        android:id="@+id/tvQCount"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvScore_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <!--MIDDLE HEADER !-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/tvQCount"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvTerm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/txtTerm"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <!--MIDDLE HEADER PART II!-->
   <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:src="@drawable/ic_thumbsup"
       android:layout_below="@+id/tvTerm"
       android:layout_toStartOf="@+id/tvFeedback" />

   <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFeedbackGood"
       android:layout_below="@+id/imageView2"
       android:layout_toStartOf="@+id/tvScore"
       android:layout_marginTop="34dp" />

    <!--BOTTOM QUESTIONS !-->
    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnNext"
        android:orientation="vertical">
        <!--A!-->
        <RadioButton
            android:id="@+id/rdoOptionA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!--B!-->
        <RadioButton
            android:id="@+id/rdoOptionB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!--C!-->
        <RadioButton
            android:id="@+id/rdoOptionC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!--D!-->
        <RadioButton
            android:id="@+id/rdoOptionD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Next_text"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvTerm" />


</RelativeLayout>